applications/mongo/component-structure/mongodb-namespace.yaml
# https://kubernetes.io/docs/tasks/administer-cluster/namespaces/#creating-a-new-namespace
apiVersion: v1
kind: Namespace
metadata:
  name: app-mongo
