applications/mongo/component-structure/mongoexpress-deployment.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#creating-a-deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpress-deployment
  namespace: app-mongo
  labels:
    app: mongoexpress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mongoexpress
  template:
    metadata:
      labels:
        app: mongoexpress
    spec:
      containers:
      - name: mongoexpress
        image: mongo-express # https://hub.docker.com/_/mongo-express
        ports:
        - containerPort: 8081
