applications/mongo/component-structure/mongodb-service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/#services-without-selectors
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: app-mongo
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017 # Mongodb port
      targetPort: 27017 # Mongodb port
