applications/mongo/component-structure/mongoexpress-service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/#services-without-selectors
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress-service
  namespace: app-mongo
spec:
  selector:
    app: mongoexpress
  ports:
    - protocol: TCP
      port: 8081 # mongoexpress port
      targetPort: 8081 # mongoexpress port
