applications/mongo/component-structure/mongoexpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress-service
  namespace: app-mongo
spec:
  selector:
    app: mongoexpress
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
