applications/mongo/component-structure/mongoexpress-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoexpress-ingress
  namespace: app-mongo
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mongoexpress-service
            port:
              number: 8081
